Rename CollectionId to CollectionName.
